Overflow case in list view tackled with fixed header

--- a/src/demo/NavPage/NavPageComponents/Header/Header.scss
+++ b/src/demo/NavPage/NavPageComponents/Header/Header.scss
@@ -9,6 +9,9 @@ $kai-header-height: 2.8rem;
   width: 100%;
   line-height: $kai-header-height;
   outline: none;
+  top: 0;
+  position: fixed;
+  height: 3rem;
 
   h1 {
     width: 100%;
