--- a/src/demo/NavPage/NavPageComponents/NavListView/NavListView.scss
+++ b/src/demo/NavPage/NavPageComponents/NavListView/NavListView.scss
@@ -2,4 +2,5 @@
 	width: 100%;
 	height: stretch;
 	overflow: hidden;
+	margin-top: 3rem;
 }
